--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 torch
 grpcio
 grpcio-tools
-betterproto[compiler]
+--pre betterproto[compiler]
+git+https://github.com/learning-at-home/hivemind.git
 safetensors
